# heredocs-r2

./: CHANGELOG.md  README.md  heredocs-r2.cabal  heredocs.cabal
.github/workflows/: test.yaml
src/Text/: Heredoc.hs
test/: Spec.hs
test/Text/: HeredocSpec.hs
