cabal-version: 2.2

name:           heredocs
version:        0.2.1.1
description:    A heredocument library supports shakespeare-like syntax.
synopsis:       Heredocument on Haskell
homepage:       https://github.com/t-sasaki915/heredoc#readme
bug-reports:    https://github.com/t-sasaki915/heredoc/issues
author:         cutsea110
maintainer:     cutsea110@gmail.com, netst915@gmail.com
copyright:      Copyright (c) 2016, cutsea110        
category:       Text
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/heredoc

library
  exposed-modules:     
      Text.Heredoc
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , bytestring >= 0.12.1.0
    , doctest >= 0.22.6
    , parsec >=3.1.18.0
    , template-haskell >=2.23.0.0
    , text >= 2.1.2
  default-language: Haskell2010

test-suite heredocs-test
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      heredocs
    , base >=4.7 && <5
    , bytestring >= 0.12.1.0
    , doctest >= 0.22.6
    , text >= 2.1.2
  default-language: Haskell2010
