cabal-version: 2.2

name:           heredocs
version:        0.2.2.0
description:    A heredocument library supports shakespeare-like syntax.
synopsis:       Heredocument on Haskell
homepage:       https://github.com/t-sasaki915/heredocs#readme
bug-reports:    https://github.com/t-sasaki915/heredocs/issues
author:         cutsea110
maintainer:     netst915@gmail.com
copyright:      Copyright (c) 2016, cutsea110        
category:       Text
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/heredocs

library
  exposed-modules:     
      Text.Heredoc
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , parsec >=3.1 && <3.2
    , template-haskell >=2.23 && <3
    , text >=2 && <3
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes

test-suite heredocs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Text.HeredocSpec
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      heredocs
    , base >=4.7 && <5
    , hspec >=2 && <3
    , bytestring >=0.12 && <0.13
    , text
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes
